--- a/package.json
+++ b/package.json
@@ -28,18 +28,21 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
-    "@nguniversal/express-engine": "^14.1.0",
+    "@nguniversal/builders": "^14.1.0",
+    "@nguniversal/express-engine": "^14.2.3",
+    "@types/express": "^4.17.0",
     "express": "^4.15.2",
+    "postcss": "^8.4.16",
     "rxjs": "~7.5.0",
+    "tailwindcss": "^3.1.8",
     "tslib": "^2.3.0",
+    "typescript": "~4.7.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.3",
     "@angular/cli": "~14.1.3",
     "@angular/compiler-cli": "^14.2.0",
-    "@nguniversal/builders": "^14.1.0",
-    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^14.15.0",
     "autoprefixer": "^10.4.8",
@@ -48,9 +51,6 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "typescript": "~4.7.2"
+    "karma-jasmine-html-reporter": "~2.0.0"
   }
 }
