--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
-    "@angular/fire": "^7.4.1",
     "@angular/forms": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
@@ -30,11 +29,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@nguniversal/builders": "^14.1.0",
     "@nguniversal/express-engine": "^14.2.3",
+    "@supabase/supabase-js": "^2.10.0",
     "@types/express": "^4.17.0",
+    "autoprefixer": "^10.4.8",
     "express": "^4.15.2",
     "postcss": "^8.4.16",
     "rxjs": "~7.5.0",
-    "autoprefixer": "^10.4.8",
+    "swagger-ui": "^4.17.0",
     "tailwindcss": "^3.1.8",
     "tslib": "^2.3.0",
     "typescript": "~4.7.2",
@@ -51,6 +52,7 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0"
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "supabase": "^1.41.6"
   }
 }
